# unhinged

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_waitlist_signups.py  002_simulation_invites.py  003_add_user_profile_clerk_fields.py  004_add_waitlist_entries.py
apriori/: __init__.py  cli.py  config.py  observability.py
apriori/agents/: __init__.py  base_agent.py  dialogue_graph.py  memory_manager.py
apriori/api/: deps.py  main.py  schemas.py
apriori/api/routes/: auth.py  invites.py  profiles.py  simulate.py  waitlist.py
apriori/core/: __init__.py  alignment_scorer.py  collapse_detector.py  event_generator.py  monte_carlo.py  tom_tracker.py
apriori/db/: __init__.py  models.py  session.py
apriori/models/: __init__.py  events.py  linguistic.py  shadow_vector.py  simulation.py
apriori/workflows/: __init__.py  simulation_workflow.py  worker.py
data/demo_profiles/: arjun.json  priya.json
tests/: conftest.py  test_collapse_detector.py  test_e2e_demo.py  test_event_generator.py  test_monte_carlo.py  test_tom_tracker.py  test_waitlist.py
web/: .env.local.example  CHANGES.md  package-lock.json  package.json  vercel.json
web/src/: middleware.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx
web/src/app/admin/: layout.tsx  (+1 more)
web/src/components/: ErrorBoundary.tsx
web/src/hooks/: useSimulationProgress.ts
web/src/lib/: api.ts  mock-data.ts  onboarding-store.ts  simulation-store.ts
web/src/types/: simulation.ts
(+51 files in other folders)
