[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apriori"
version = "0.1.0"
description = "APRIORI — Relational Foundation Model for long-term relational homeostasis prediction"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "temporalio>=1.7.0",
    "fastembed>=0.3.0",
    "numpy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "redis[asyncio]>=5.0.0",
    "alembic>=1.13.0",
    "langsmith>=0.1.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.scripts]
apriori = "apriori.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
